--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,7 +1,10 @@
+<bodY>
 <h1>ようこそ Bookers へ！</h1>
 
-<p><span class="bald">Bookers</span>では、さまざまな書籍に関するあなたの意見や
+<p class="box"><span class="bald">Bookers</span>では、さまざまな書籍に関するあなたの意見や</p>
 
-印象を共有し交換することができます</p>
+<p class="box">印象を共有し交換することができます</p>
 
-<%= link_to "star", books_path %>
+<p class="box"><%= link_to "star", books_path %></p>
+
+</bodY>
