--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,15 +1,36 @@
-<h1>Editing Book</h1>
+<body>
+  <h1>Editing Book</h1>
+  
+  <% if @book.errors.any? %>
+    <div class="error">
+      <h2><%= @book.errors.count %>errors prohibited this book from being saved:</h2>
+      <div class="error_m">
+        <ul>
+          <% @book.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+          <% end %>
+        </ul>
+      </div>
+    </div>
+  <% end %>
 
-<%= form_with model: @book, url: update_book_path(@book.id), method: :patch do |f| %>
+  <%= form_with model: @book,  method: :patch do |f| %>
 
-  <p>Title</p>
-  <%= f.text_field :title %>
+    <div class="form_box">
+      <p>Title</p>
+      <%= f.text_field :title %>
+    </div>
+  
+    <div class="form_box">
+     <p>Body</p>
+     <%= f.text_area :body %>
+    </div>
+  
+    <div class="form_botan">
+      <p><%= f.submit 'Create Book' %></p>
+    </div>
+  <% end %>
 
-  <p>Body</p>
-  <%= f.text_area :body %>
+  <p><%= link_to "Show", book_path(@book.id) %> | <%= link_to "Back", books_path %></p>
 
-  <%= f.submit 'Create Book' %>
-
-<% end %>
-
-<p><%= link_to "show", book_path(book.id) %> | <%= link_to "Back", books_path %></p>
+</body>
