--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,24 +1,64 @@
-<h1>Books</h1>
-
-<% @books.each do |book| %>
-
-  <h3>Title</h3>
-  <span><%= book.title %></span>
-
-  <h3>Body</h3>
-  <span><%= book.body %></span>
-
-  <span>
-    <%= link_to "Show", book_path(book.id) %>
-  </span>
+<body>
+  <% if flash[:notice] %>
+　  <div class="flash">
+    <%= flash[:notice] %>
+　  </div>
+  <% end %>
   
-  <span>
-    <%= link_to "Edit", edit_list_path(@book.id) %>
-  </span>
+    <h1>Books</h1>
+    <table>
+      <thead>
+        <tr>
+          <th>Title</th>
+          <th>Body</th>
+          <th colspan="2"></th>
+        </tr>
+      </thead>
 
-  <span>
-    <%= link_to "Destroy", destroy_book_path(@book.id), method: :delete, "data-confirm" => "本当に削除しますか？" %>
-  </span>
+      <tbody>
+        <% @books.each do |book| %>
+          <tr>
+            <td><%= book.title %></td>
+            <td><%= book.body %></td>
+            <td><%= link_to "Show", book_path(book.id) %></td>
+            <td><%= link_to "Edit", edit_book_path(book.id) %></td>
+            <td> <%= link_to "Destroy", book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
 
-<% end %>
+ 
+    <h2>New book</h2>
 
+  <% if @book.errors.any? %>
+    <div class="error">
+      <h2><%= @book.errors.count %>errors prohibited this book from being saved:</h2>
+      <div class="error_m">
+        <ul>
+          <% @book.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+          <% end %>
+        </ul>
+      </div>
+    </div>
+  <% end %>
+
+  <!-- form_with部分 -->
+  <%= form_with model: @book do |f| %>
+    <div class="form_box">
+      <p>Title</p>
+      <%= f.text_field :title %>
+	  </div>
+	  
+	  <div class="form_box">
+      <p>Body</p>
+      <%= f.text_area :body %>
+    </div>
+    
+    <div class="form_botan">
+     <p><%= f.submit 'Create Book' %></p>
+    </div>
+  <% end %>
+
+</body>
