--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,8 +1,14 @@
-<p class="green"> Book was successfully created.</p>
+<body>
+<% if flash[:notice] %>
+　<div class="flash">
+    <%= flash[:notice] %>
+　</div>
+<% end %>
 
-<p><span class="bald">Title:</span><%= @book.title %></p>
+<div class="box"><span class="bald">Title:</span><%= @book.title %></div>
 
-<p><span class="bald">Body:</span><%= @book.body %></p>
+<div class="box"><span class="bald">Body:</span><%= @book.body %></div>
 
-<p><%= link_to "Edit", edit_list_path(@book.id) %> | <%= link_to "Back", books_path %>
-</P>
+<p><%= link_to "Edit", edit_book_path(@book.id) %> | <%= link_to "Back", books_path %>
+</p>
+</body>
