--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -26,8 +26,8 @@
      <%= f.text_area :body %>
     </div>
   
-    <div class="form_botan">
-      <p><%= f.submit 'Create Book' %></p>
+    <div class="form_button">
+      <p><%= f.submit 'Update Book' %></p>
     </div>
   <% end %>
 
