--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -56,7 +56,7 @@
       <%= f.text_area :body %>
     </div>
     
-    <div class="form_botan">
+    <div class="form_button">
      <p><%= f.submit 'Create Book' %></p>
     </div>
   <% end %>
